[gd_scene load_steps=4 format=3 uid="uid://bqscpqasmrrjp"]

[ext_resource type="Script" uid="uid://ij0l0mgi4bxm" path="res://scripts/virtual_camera.gd" id="1_pdyol"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qawlr"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pdyol"]
size = Vector2(20, 20)

[node name="VirtualCamera" type="Node2D"]
script = ExtResource("1_pdyol")

[node name="SensorLeft" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorLeft"]
position = Vector2(-161, -5)
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorRight" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRight"]
position = Vector2(161, -5)
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorTop" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorTop"]
position = Vector2(-5, -91)
rotation = -1.5708
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorBottom" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorBottom"]
position = Vector2(-5, 91)
rotation = -1.5708
shape = SubResource("SegmentShape2D_qawlr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = SubResource("PlaceholderTexture2D_pdyol")
